--- a/apps/client/src/app/styles/global.css
+++ b/apps/client/src/app/styles/global.css
@@ -1,10 +1,9 @@
+/* global.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 
 body {
   @apply bg-gray-700 text-zinc-100;
   -webkit-font-smoothing: antialiased;
 }
-
